UI changes of INBOX

--- a/agile-frontend/WebContent/flatfull/tpl/inbox.html
+++ b/agile-frontend/WebContent/flatfull/tpl/inbox.html
@@ -7,7 +7,7 @@
 </div>
 <div class="app-content-body fade-in-up ng-scope" ui-view="">
 <div class="hbox hbox-auto-xs hbox-auto-sm ng-scope" ng-controller="MailCtrl">
-  <div class="col w-md bg-light dk b-r bg-auto">
+  <div class="col w-md dk b-r bg-auto">
     <div class="wrapper b-b bg">
       <button class="btn btn-sm btn-default pull-right visible-sm visible-xs" ui-toggle-class="show" target="#email-menu"><i class="fa fa-bars"></i></button>
       <a class="btn btn-sm btn-danger w-xs font-bold  mail-compose" href="#compose">Compose</a>
@@ -45,6 +45,7 @@
 <div ng-controller="MailListCtrl" class="ng-scope">
   <!-- header -->
   <div class="wrapper bg-light lter b-b">
+  <!--<i class="icon-spinner icon-spin icon-large"></i>Loading...<span class="sr-only	">Loading...</span>-->
     <div class="btn-group pull-right" id="filter-options">
       
     </div>
