nexmo thirdparty api for agile sms

--- a/agile-frontend/WebContent/flatfull/tpl/call-noty.html
+++ b/agile-frontend/WebContent/flatfull/tpl/call-noty.html
@@ -170,7 +170,7 @@
 
 						<span class="sms-message-count font-bold" style="margin-right:6px ; margin-left: -12px; margin-left:-13px;"></span>
 						<span class="sms-message hidden" style="margin-right:5px"></span>
-							<a id="send-sms " class="btn-sm btn-primary" href="javascript:void(0);" onclick="sendPersonalSMS(this,{{id}});" style="float: right;  margin-right: 5px;">Send SMS</a>
+							<a id="send-sms" class="btn-sm btn-primary" href="javascript:void(0);" onclick="sendPersonalSMS(this,{{id}}, '{{widget_name}}');" style="float: right;  margin-right: 5px;">Send SMS</a>
 							<a id="" class="btn-sm btn-default" href="javascript:void(0);" onclick="closeCallNoty(true);" style="float: right;margin-right: 5px;width: 76px;text-align: center;background-color: #d6d6d6;">Cancel</a>
 						</div>
 					</div>					
