--- a/agile-frontend/WebContent/flatfull/tpl/js-localize.html
+++ b/agile-frontend/WebContent/flatfull/tpl/js-localize.html
@@ -845,7 +845,10 @@ var _Agile_Resources_Json = {
             "Skype-name" : "{{agile_lng_translate 'widgets' 'Skype-name'}}",
 
             "Asterisk-content" : "{{agile_lng_translate 'widgets' 'Asterisk-content'}}",
-            "Asterisk-name" : "{{agile_lng_translate 'widgets' 'Asterisk-name'}}",   
+            "Asterisk-name" : "{{agile_lng_translate 'widgets' 'Asterisk-name'}}", 
+
+            "Nexmo-content" : "{{agile_lng_translate 'widgets' 'Nexmo-content'}}",
+            "Nexmo-name" : "{{agile_lng_translate 'widgets' 'Nexmo-name'}}",     
 
             "Custom-content" : "{{agile_lng_translate 'widgets' 'Custom-content'}}",
             "Custom-displayName" : "{{agile_lng_translate 'widgets' 'Custom-displayName'}}",
