--- a/agile-frontend/WebContent/flatfull/tpl/contact-detail/contact-details-timeline.html
+++ b/agile-frontend/WebContent/flatfull/tpl/contact-detail/contact-details-timeline.html
@@ -372,7 +372,7 @@
             <div class="timestamp">{{time}}</div>
             <div class="text-md text-cap pull-left">    
                 <div class="contact-job-title text-base custom-color">
-                <img src="{{#if_equals "TWILIO" label}}/widgets/sms-small-logo.png {{else}}/widgets/plivosms-small-logo.png {{/if_equals}}" style="width: 15px; height: 15px; margin-right: 3px; position: relative; top: 2px;  float:left;" data-toggle="tooltip" data-placement="top" title="" data-original-title="{{label}} SMS">
+                <img src="{{#if_equals "TWILIO" label}}/widgets/sms-small-logo.png {{else}}/widgets/nexmosms.png {{/if_equals}}" style="width: 15px; height: 15px; margin-right: 3px; position: relative; top: 2px;  float:left;" data-toggle="tooltip" data-placement="top" title="" data-original-title="{{label}} SMS">
                     <i class="icon-envelope-alt text-muted p-r-xs"></i>{{custom3}}
                 </div>
             </div>
