--- a/agile-frontend/WebContent/flatfull/tpl/widget/widget-add.html
+++ b/agile-frontend/WebContent/flatfull/tpl/widget/widget-add.html
@@ -842,8 +842,14 @@
 									<span class="label label-sm bg-danger" style="margin: 5px;">{{agile_lng_translate 'deal-view' 'beta'}}</span>
 								</center>
 			        		{{else}}
+			        		{{#if_equals name "Nexmo"}}
+						<center>
+							<span style="font-size: 24px;width: 135px;height: 50px; text-align:center;vertical-align: middle;"><span><img src="{{logo_url}}" style="height: 40px;margin-right: 4px;margin-top: 1px;"></span></span>
+						</center>
+						{{else}}
 			        <center><img class="m-b-none img-responsive thumb-xl bg-transparent" style="height:47px;" src="{{logo_url}}" /></center>
 			        {{/if_equals}}
+					{{/if_equals}}
 					{{/if_equals}}
 					{{/if_equals}}
 					{{/if_equals}}
