--- a/agile-frontend/WebContent/flatfull/tpl/import-contacts.html
+++ b/agile-frontend/WebContent/flatfull/tpl/import-contacts.html
@@ -673,7 +673,9 @@
 		{{#each custom_fields}}
 			<option class="CUSTOM" value="properties_{{this.field_label}}">{{this.field_label}}</option>
 		{{/each}}
-		<option value="properties__ignore_" class="text-info add-custom-field-from-import">-{{agile_lng_translate 'admin-settings-custom-fields' 'add-custom-field'}}-</option>
+		{{#isAdmin}}
+			<option value="properties__ignore_" class="text-info add-custom-field-from-import">-{{agile_lng_translate 'admin-settings-custom-fields' 'add-custom-field'}}-</option>
+		{{/isAdmin}}
 </optgroup>
 </select>
 
@@ -755,7 +757,9 @@
 		{{#each custom_fields}}
 			<option class="CUSTOM" value="properties_{{this.field_label}}">{{this.field_label}}</option>
 		{{/each}}
-		<option value="properties__ignore_" class="text-info add-custom-field-from-import">-{{agile_lng_translate 'admin-settings-custom-fields' 'add-custom-field'}}-</option>
+		{{#isAdmin}}
+			<option value="properties__ignore_" class="text-info add-custom-field-from-import">-{{agile_lng_translate 'admin-settings-custom-fields' 'add-custom-field'}}-</option>
+		{{/isAdmin}}
 </optgroup>
 </select>
 
