create ticket btn-mlg-imp new theme only

--- a/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
@@ -198,7 +198,7 @@
           {{else}}
           <a href="javascript:void(0);" data-dismiss="modal" class="btn btn-sm btn-default">{{agile_lng_translate 'report-add' 'close'}}</a> 
           {{/isNewTheme}}
-          <a id="create-ticket" href="javascript:void(0);" class="btn btn-sm btn-mlg-imp btn-primary save" data-loading-text="Create">{{agile_lng_translate 'tickets' 'create'}}</a>
+          <a id="create-ticket" href="javascript:void(0);" class="btn btn-sm {{#isNewTheme}}btn-mlg-imp{{/isNewTheme}} btn-primary save" data-loading-text="Create">{{agile_lng_translate 'tickets' 'create'}}</a>
           <span class="save-status"></span>
       </div>
     </div>
