deal position and text change

--- a/agile-frontend/WebContent/flatfull/tpl/import-contacts.html
+++ b/agile-frontend/WebContent/flatfull/tpl/import-contacts.html
@@ -752,7 +752,7 @@
 <option value="properties_description">{{agile_lng_translate 'deal-view' 'descriptions'}}</option> 
 <option value="properties_dealSource">{{agile_lng_translate 'deal-view' 'deal-source'}}</option> 
 <option value="properties_lossReason">{{agile_lng_translate 'deal-view' 'loss-reason'}}</option> 
-<optgroup label="Custom field" id = "custom_fields">
+<optgroup label="Custom Field" id = "custom_fields">
    
 		{{#each custom_fields}}
 			<option class="CUSTOM" value="properties_{{this.field_label}}">{{this.field_label}}</option>
