--- a/agile-frontend/WebContent/flatfull/tpl/admin-settings/settings-milestones.html
+++ b/agile-frontend/WebContent/flatfull/tpl/admin-settings/settings-milestones.html
@@ -103,7 +103,7 @@
 			<fieldset>
     		<div class="control-group m-b-none">  	 
                     <div id="milestone-values-{{id}}">
-					<table class="table table-hover milestones-table bg-white table-hover m-b-none t-l-fix" data="{{id}}" >
+					<table class="table table-hover milestones-table bg-white table-hover m-b-none" data="{{id}}" >
 					<colgroup><col width="45%"><col width="8%"></colgroup>
 					<tbody class="deal-tracks-tbody ui-sortable">
 					{{#milestone_ul this}}{{/milestone_ul}}
