popover issue fix

--- a/agile-frontend/WebContent/flatfull/tpl/tickets/tickets-model.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/tickets-model.html
@@ -23,6 +23,7 @@
     </a>
   </td>
   <td class="v-middle p-l-none p-r-none open-ticket show-notes pos-rlt notes-container" {{#is_mobile}} {{else}} style="width: 55%;"{{/is_mobile}}>
+    <div class="pos-rlt">
      <table class="ticket-data" style="background-color: inherit;">
         <tr>
           <td>
@@ -151,6 +152,7 @@
           {{/if_equals}}
         </div>
       </div>
+    </div>
   </td>
   <td class="v-middle p-l-none cursor-default {{#is_mobile}} hidden-xs {{/is_mobile}}" style="width: 27%;">
     <table class="ticket-data txt-small full-width" style="background-color: inherit;">
