--- a/agile-frontend/WebContent/flatfull/tpl/workflow/workflow-alerts.html
+++ b/agile-frontend/WebContent/flatfull/tpl/workflow/workflow-alerts.html
@@ -199,7 +199,7 @@
 				<div class="modal-header">
 					<button class="close" data-dismiss="modal"><i class="material-icons" style="font-size: 0.8em;padding-top: 5px;">close</i></button>
 					<h3 class="modal-title">
-						<h6 id="popup-msg" style="margin:5px"><span style="color: green;">
+						<h6 id="popup-msg" style="margin:5px;margin-right:20px"><span style="color: green;">
 						{{agile_lng_translate 'Campaigns' 'campaign-saved-sucessfully'}}</span></h6>
 						<i class="glyphicon glyphicon-arrow-right"></i> <strong> {{title}} </strong> {{agile_lng_translate 'Campaigns' 'assign-contacts-to-campaign'}}</</h3>
 				</div> 
