Feedback:Fixed new theme issue

--- a/agile-frontend/WebContent/flatfull/tpl/ticket-feedback-log.html
+++ b/agile-frontend/WebContent/flatfull/tpl/ticket-feedback-log.html
@@ -82,7 +82,7 @@
 <script id="ticket-feedback-log-model-template" type="text/html">
 <td style="vertical-align:middle">
 	
-    <div class="avatar text-capitalize agile-img m-r-sm " data-toggle="tooltip" data-container="body" data-placement="bottom" title="{{first_name}} {{last_name}}" style="width:196px;
+    <div class="avatar text-capitalize agile-img m-r-sm " data-toggle="tooltip" data-container="body" data-placement="bottom" title="{{first_name}} {{last_name}}" style="width:196px !important;
     overflow: hidden; border-radius: 0px;
     text-overflow: ellipsis;word-break:break-word">
                 
