Adding company name to template

--- a/agile-frontend/WebContent/misc/email/ticket_minimal_reply_html.html
+++ b/agile-frontend/WebContent/misc/email/ticket_minimal_reply_html.html
@@ -19,16 +19,16 @@
 						<tr>	
 							<td width="60%" style="padding-bottom: 2px;">
 								<br/>
-								<a href="https://{{namespace}}.agilecrm.com/feedback?feedback={{url1}}" style="line-height: 25px;font-size: 12px;width:25px;text-decoration: none; ">
-									<img src="https://{{namespace}}.agilecrm.com/img/smiley-1.png" style="float:left;" id=1 />&nbsp;</a>
-								<a href="https://{{namespace}}.agilecrm.com/feedback?feedback={{url2}}" style="line-height: 25px;font-size: 12px;width:25px;text-decoration: none;">
-									<img src="https://{{namespace}}.agilecrm.com/img/smiley-2.png" style="float:left;" id=2/>&nbsp;</a>
-								<a href="https://{{namespace}}.agilecrm.com/feedback?feedback={{url3}}" style="line-height: 25px;font-size: 12px;width:25px;text-decoration: none;">
-									<img src="https://{{namespace}}.agilecrm.com/img/smiley-3.png" style="float:left;" id=3/>&nbsp;</a>
-								<a href="https://{{namespace}}.agilecrm.com/feedback?feedback={{url4}}" style="line-height: 25px;font-size: 12px;width:25px;text-decoration: none;">
-									<img src="https://{{namespace}}.agilecrm.com/img/smiley-4.png" style="float:left;" id=4/>&nbsp;</a>
-								<a href="https://{{namespace}}.agilecrm.com/feedback?feedback={{url5}}" style="line-height: 25px;font-size: 12px;width:25px;text-decoration: none;">
-									<img src="https://{{namespace}}.agilecrm.com/img/smiley-5.png" style="float:left;" id=5/>&nbsp;</a> 
+								<a href="https://{{company_name}}.agilecrm.com/feedback?feedback={{url1}}" style="line-height: 25px;font-size: 12px;width:25px;text-decoration: none; ">
+									<img src="https://{{company_name}}.agilecrm.com/img/smiley-1.png" style="float:left;" id=1 />&nbsp;</a>
+								<a href="https://{{company_name}}.agilecrm.com/feedback?feedback={{url2}}" style="line-height: 25px;font-size: 12px;width:25px;text-decoration: none;">
+									<img src="https://{{company_name}}.agilecrm.com/img/smiley-2.png" style="float:left;" id=2/>&nbsp;</a>
+								<a href="https://{{company_name}}.agilecrm.com/feedback?feedback={{url3}}" style="line-height: 25px;font-size: 12px;width:25px;text-decoration: none;">
+									<img src="https://{{company_name}}.agilecrm.com/img/smiley-3.png" style="float:left;" id=3/>&nbsp;</a>
+								<a href="https://{{company_name}}.agilecrm.com/feedback?feedback={{url4}}" style="line-height: 25px;font-size: 12px;width:25px;text-decoration: none;">
+									<img src="https://{{company_name}}.agilecrm.com/img/smiley-4.png" style="float:left;" id=4/>&nbsp;</a>
+								<a href="https://{{company_name}}.agilecrm.com/feedback?feedback={{url5}}" style="line-height: 25px;font-size: 12px;width:25px;text-decoration: none;">
+									<img src="https://{{company_name}}.agilecrm.com/img/smiley-5.png" style="float:left;" id=5/>&nbsp;</a> 
 							</td>
 						</tr>
                     	</tbody>
