added component for latest post and made changes to jquery plugin

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
 <script src="assets/js/slick.min.js"></script> 
 <script src="assets/js/jquery.li-scroller.1.0.js"></script> 
 <!-- <script src="assets/js/jquery.ticker.min.js"></script>  -->
+<script src="assets/js/jquery.marquee@1.5.0.js"></script> 
 <script src="assets/js/jquery.fancybox.pack.js"></script> 
 <script src="assets/js/custom.js"></script> 
 </body>
